--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,14 +4,22 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        {
+            "type": "java",
+            "name": "Login",
+            "request": "launch",
+            "mainClass": "Login",
+            "projectName": "software-engineering-group-project_c3e2d212",
+            "vmArgs": "--module-path=C:/Users/bjone/Downloads/openjfx-21.0.1_windows-x64_bin-sdk/javafx-sdk-21.0.1/lib --add-modules javafx.controls,javafx.fxml"
 
+        },
         {
             "type": "java",
             "name": "gamehub",
             "request": "launch",
             "mainClass": "gamehub",
             "projectName": "software-engineering-group-project_c3e2d212",
-            "vmArgs": "--module-path=C:/Users/bjone/Downloads/openjfx-19_windows-x64_bin-sdk/javafx-sdk-19/lib --add-modules javafx.controls,javafx.fxml"
+            "vmArgs": "--module-path=C:/Users/bjone/Downloads/openjfx-21.0.1_windows-x64_bin-sdk/javafx-sdk-21.0.1/lib --add-modules javafx.controls,javafx.fxml"
         },
         {
             "type": "java",
@@ -25,7 +33,7 @@
             "request": "launch",
             "mainClass": "wordle",
             "projectName": "software-engineering-group-project_c3e2d212",
-            "vmArgs": "--module-path=C:/Users/bjone/Downloads/openjfx-19_windows-x64_bin-sdk/javafx-sdk-19/lib --add-modules javafx.controls,javafx.fxml"
+            "vmArgs": "--module-path=C:/Users/bjone/Downloads/openjfx-21.0.1_windows-x64_bin-sdk/javafx-sdk-21.0.1/lib --add-modules javafx.controls,javafx.fxml"
         }
     ]
 }
