added chess, initial commit

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,14 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Chess",
+            "request": "launch",
+            "mainClass": "Chess",
+            "projectName": "software-engineering-group-project_c3e2d212",
+            "vmArgs": "--module-path=C:/Users/bjone/Downloads/openjfx-21.0.1_windows-x64_bin-sdk/javafx-sdk-21.0.1/lib --add-modules javafx.controls,javafx.fxml"
+        },
+        {
+            "type": "java",
             "name": "Login",
             "request": "launch",
             "mainClass": "Login",
@@ -47,6 +55,46 @@
             "mainClass": "wordle",
             "projectName": "software-engineering-group-project_c3e2d212",
             "vmArgs": "--module-path=C:/Users/bjone/Downloads/openjfx-21.0.1_windows-x64_bin-sdk/javafx-sdk-21.0.1/lib --add-modules javafx.controls,javafx.fxml"
+        },
+        {
+            "type": "java",
+            "name": "Chess",
+            "request": "launch",
+            "mainClass": "Chess",
+            "projectName": "software-engineering-group-project_c3e2d212",
+            "vmArgs": "--module-path=C:/Users/bjone/Downloads/openjfx-21.0.1_windows-x64_bin-sdk/javafx-sdk-21.0.1/lib --add-modules javafx.controls,javafx.fxml"
+        },
+        {
+            "type": "java",
+            "name": "ChessBoard",
+            "request": "launch",
+            "mainClass": "Chess",
+            "projectName": "software-engineering-group-project_c3e2d212",
+            "vmArgs": "--module-path=C:/Users/bjone/Downloads/openjfx-21.0.1_windows-x64_bin-sdk/javafx-sdk-21.0.1/lib --add-modules javafx.controls,javafx.fxml"
+        },
+        {
+            "type": "java",
+            "name": "Piece",
+            "request": "launch",
+            "mainClass": "Chess",
+            "projectName": "software-engineering-group-project_c3e2d212",
+            "vmArgs": "--module-path=C:/Users/bjone/Downloads/openjfx-21.0.1_windows-x64_bin-sdk/javafx-sdk-21.0.1/lib --add-modules javafx.controls,javafx.fxml"
+        },
+        {
+            "type": "java",
+            "name": "Tile",
+            "request": "launch",
+            "mainClass": "Chess",
+            "projectName": "software-engineering-group-project_c3e2d212",
+            "vmArgs": "--module-path=C:/Users/bjone/Downloads/openjfx-21.0.1_windows-x64_bin-sdk/javafx-sdk-21.0.1/lib --add-modules javafx.controls,javafx.fxml"
+        },
+        {
+            "type": "java",
+            "name": "Pc",
+            "request": "launch",
+            "mainClass": "Chess",
+            "projectName": "software-engineering-group-project_c3e2d212",
+            "vmArgs": "--module-path=C:/Users/bjone/Downloads/openjfx-21.0.1_windows-x64_bin-sdk/javafx-sdk-21.0.1/lib --add-modules javafx.controls,javafx.fxml"
         }
-    ]
+        ]
 }
